<resources>
    <string name="app_name">CricFreak</string>
    <string name="home">Home</string>
    <string name="explore">EXPLORE TEAMS</string>
    <string name="team_code">BAN</string>
    <string name="players">Players</string>
    <string name="current_squad">Current Squad</string>
    <string name="matches">Matches</string>
    <string name="details">Details</string>
    <string name="rankings">Rankings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_description">Hello new tab</string>
    <string name="image">Image</string>
    <string name="team1">Bangladesh</string>
    <string name="team2">India</string>
    <string name="stage">Bangladesh tour of India</string>
    <string name="match_round">1st T20I</string>
    <string name="versus">VS</string>
    <string name="venue_name">SBNC Stadium</string>
    <string name="venue_city">Dhaka</string>
    <string name="date">2023-02-23</string>
    <string name="time">16:30</string>
    <string name="note">Bangladesh have won by 20 runs.</string>
    <string name="score">170/7</string>
    <string name="overs">(17.3)</string>
    <string name="live">LIVE</string>
    <string name="live_note">Bangladesh need 1 wicket to win.</string>
    <string name="rank_text">Rank</string>
    <string name="team_text">Team</string>
    <string name="matches_text">Matches</string>
    <string name="points_text">Points</string>
    <string name="rating_text">Rating</string>
    <string name="rank">10</string>
    <string name="matches_played">20</string>
    <string name="points">1010</string>
    <string name="ratings">101</string>
    <string name="info_stage">Stage: %s</string>
    <string name="info_round">Round: %s</string>
    <string name="info_date">Date: %s</string>
    <string name="info_league">League: %s</string>
    <string name="info_venue">Venue: %s</string>
    <string name="info_city">City: %s</string>
    <string name="info_capacity">Capacity: %s</string>
    <string name="info_toss">Toss Won: %s</string>
    <string name="info_elected">Elected: %s</string>
    <string name="info_first_umpire">First Umpire: %s</string>
    <string name="info_second_umpire">Second Umpire: %s</string>
    <string name="info_tv_umpire">TV Umpire: %s</string>
    <string name="info_referee">Referee: %s</string>
    <string name="player_name">Shakib Al Hasan</string>
    <string name="player_captain">(C)</string>
    <string name="player_position">Allrounder</string>
    <string name="button_t20i">International</string>
    <string name="button_domestic">Domestic</string>
    <string name="button_local">Local Team</string>
    <string name="button_visitor">Visitor Team</string>
    <string name="player_text">Player</string>
    <string name="player_runs_text">R</string>
    <string name="batting_balls_text">B</string>
    <string name="batting_fours_text">4s</string>
    <string name="batting_sixes_text">6s</string>
    <string name="batting_strike_rate_text">SR</string>
    <string name="batting_runs">60</string>
    <string name="batting_balls">30</string>
    <string name="batting_fours">5</string>
    <string name="batting_sixes">3</string>
    <string name="batting_strike_rate">200</string>
    <string name="bowling_overs_text">Ov</string>
    <string name="bowling_maiden_text">M</string>
    <string name="bowling_wickets_text">W</string>
    <string name="bowling_economy_rate_text">ECO</string>
    <string name="bowling_overs">4</string>
    <string name="bowling_maiden">1</string>
    <string name="bowling_runs">42</string>
    <string name="bowling_wickets">2</string>
    <string name="bowling_economy_rate">10.5</string>
    <string name="search">Search</string>

</resources>