<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.fazlerabbikhan.cricfreak.fragments.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/matchesFragment"
        android:name="com.fazlerabbikhan.cricfreak.fragments.matches.MatchesFragment"
        android:label="@string/matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/recentDetailsFragment"
        android:name="com.fazlerabbikhan.cricfreak.fragments.matches.RecentDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_recent_details" />

    <fragment
        android:id="@+id/rankingsFragment"
        android:name="com.fazlerabbikhan.cricfreak.fragments.rankings.RankingsFragment"
        android:label="@string/rankings"
        tools:layout="@layout/fragment_rankings" />
</navigation>