<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.matches.BowlingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/league_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_local"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:backgroundTint="@color/CornflowerBlue"
                android:textColor="@color/White"
                android:text="@string/button_local" />

            <Button
                android:id="@+id/button_visitor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:backgroundTint="@color/BurlyWood"
                android:textColor="@color/Black"
                android:text="@string/button_visitor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="@color/SteelBlue"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_rankings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:text="@string/player_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:text="@string/bowling_overs_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:text="@string/bowling_maiden_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:text="@string/player_runs_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:text="@string/bowling_wickets_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:text="@string/bowling_economy_rate_text" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bowling_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/card_bowling" />

    </LinearLayout>

</FrameLayout>